Update index.html 2

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <section class="cta">
         <div class="container">
             <h2>Adquira Seu Detox Aqui!</h2>
-            <a href="https://pay.kirvano.com/e3d9ec61-a77d-4a41-97fc-1cfa78dc1f44">
+            <a href="https://pay.kirvano.com/e3d9ec61-a77d-4a41-97fc-1cfa78dc1f44" class="cta-button">
                 Quero meu Plano Detox por apenas R$14,90
             </a>
             <p class="guarantee">Satisfação garantida ou seu dinheiro de volta :)</p>
